--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,46 @@
         <p>We Already Be With You.</p>
     </div>
 </div>
+<!-- cards -->
 
+<div class="card" style="width: 18rem;">
+
+  <img src="/assethome/6.jpg" class="card-img-top" alt="...">
+  <div class="card-body d-flex flex-column">
+    <h5 class="card-title mb-2">Card title</h5>
+    <p class="card-text flex-grow-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary mt-2">Go somewhere</a>
+  </div>
+</div>
+
+<!-- 2-->
+<div class="card" style="width: 18rem;">
+  <img src="/assethome/itorero1.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<!-- 3 -->
+<div class="card" style="width: 18rem;">
+  <img src="/assethome/mc.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<!-- 4 -->
+<div class="card" style="width: 18rem;">
+  <img src="/assethome/3.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<!-- 5 -->
 
     <!-- bootstrap js -->
     <script
