--- a/frontend/home.htm
+++ b/frontend/home.htm
@@ -42,7 +42,7 @@
                         <a class="nav-link active" href="#">Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Packages</a>
+                        <a class="nav-link active" href="index.html">Packages</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Suppliers</a>
