--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,7 +108,7 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-4">
+    <div class="col-md-4">
       <div class="card">
         <img src="/assethome/venu3.jpg" class="card-img-top" alt="...">
         <div class="card-body d-flex flex-column">
@@ -117,7 +117,7 @@
         </div>
       </div>
     </div>
-  <div class="col-4">
+  <div class="col-md-4">
     <div class="card " >
 
       <img src="/assethome/inv1.jpg" class="card-img-top" alt="...">
@@ -127,7 +127,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-md-4">
     <div class="card " >
 
       <img src="/assethome/dres.jpg" class="card-img-top" alt="...">
@@ -137,7 +137,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-md-4">
     <div class="card " >
 
       <img src="/assethome/beaty.jpg" class="card-img-top" alt="...">
@@ -147,7 +147,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4">
+  <div class="col-md-4">
     <div class="card " >
 
       <img src="/assethome/mc.jpg" class="card-img-top" alt="...">
@@ -160,7 +160,7 @@
 
 <!-- 4 -->
   
-  <div class="col-4">
+  <div class="col-md-4">
     <div class="card " >
 
       <img src="/assethome/aime.jpg" class="card-img-top" alt="...">
@@ -173,7 +173,7 @@
 
 <!-- 5 -->
 
-    <div class="col-4">
+    <div class="col-md-4">
      
       <div class="card " >
 
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-  <div class="col-4">
+  <div class="col-md-4">
     <div class="card " >
 
       <img src="/assethome/sound6.jpg" class="card-img-top" alt="...">
@@ -196,7 +196,7 @@
   </div>
   <!--6-->
   
-      <div class="col-4">
+      <div class="col-md-4">
         <div class="card">
           <img src="/assethome/photo.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
@@ -205,7 +205,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
         <div class="card " >
     
           <img src="/assethome/food1.jpg" class="card-img-top" alt="...">
@@ -215,7 +215,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
       <div class="card " >
   
         <img src="/assethome/iriza14.jpg" class="card-img-top" alt="...">
@@ -225,7 +225,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-md-4">
       <div class="card " >
   
         <img src="/assethome/rugaba.jpg" class="card-img-top" alt="...">
