--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- FontAwesome for icons -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -53,48 +56,6 @@
         </div>
       </div>
     </nav>
-
-    <!-- slider -->
-   <!--  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="/assethome/1.jpg" class="d-block w-100" alt="Slide 1">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Slide Title 1</h5>
-            <p>Description for slide 1.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="/assethome/2.jpg" class="d-block w-100" alt="Slide 2">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Slide Title 2</h5>
-            <p>Description for slide 2.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="/assethome/3.jpg" class="d-block w-100" alt="Slide 3">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Slide Title 3</h5>
-            <p>Description for slide 3.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-            <img src="/assethome/4.jpg" class="d-block w-100" alt="Slide 4">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Slide Title 4</h5>
-              <p>Description for slide 4.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/assethome/5.jpg" class="d-block w-100" alt="Slide 4">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Slide Title 5</h5>
-              <p>Description for slide 5.</p>
-            </div>
-          </div>
-      </div>
-    </div>
--->
 <div class="image-container">
     <img src="/assethome/5.jpg" class="img" alt="Welcome to Wedding Planner">
     <div class="carousel-caption d-block">
@@ -238,6 +199,54 @@
     
     </div>
 </div>
+<!-- Footer -->
+<footer class="bg-dark text-light py-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5>About Us</h5>
+        <p>We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="home.htm" class="text-light">Home</a></li>
+          <li><a href="#" class="text-light">About</a></li>
+          <li><a href="#" class="text-light">Services</a></li>
+          <li><a href="#" class="text-light">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5>Contact Us</h5>
+        <p>Email: info@eventplanner.com</p>
+        <p>Phone: +123 456 7890</p>
+        <p>Address: 123 Event St, City, Country</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-center mt-4">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a href="#" class="text-light"><i class="fab fa-facebook"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" class="text-light"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#" class="text-light"><i class="fab fa-instagram"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-center mt-3">
+        <p>&copy; 2024 Event Planner. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
     <!-- bootstrap js -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
