--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="home.htm">Home</a>
+                <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">About</a>
@@ -41,7 +41,7 @@
                 <a class="nav-link active" href="#">Service</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Packages</a>
+                <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
@@ -60,8 +60,8 @@
         <div class="card gallery-card" data-bs-toggle="modal" data-bs-target="#supplierModal1">
             <img src="/frontend/supplyasset/supply1.jpg" class="card-img-top" alt="Supplier 1">
             <div class="card-body">
-                <h5 class="card-title">Supplier 1</h5>
-                <p class="card-text">Floral arrangements and wedding decorations.</p>
+                <h5 class="card-title">17 Suppliers</h5>
+                <p class="card-text">Decor and Venues.</p>
             </div>
         </div>
 
@@ -69,8 +69,8 @@
         <div class="card gallery-card" data-bs-toggle="modal" data-bs-target="#supplierModal2">
             <img src="https://via.placeholder.com/800x600" class="card-img-top" alt="Supplier 2">
             <div class="card-body">
-                <h5 class="card-title">Supplier 2</h5>
-                <p class="card-text">Catering and wedding cakes.</p>
+                <h5 class="card-title">14 Suppliers</h5>
+                <p class="card-text">Catering Food & Drinks</p>
             </div>
         </div>
 
@@ -78,7 +78,7 @@
         <div class="card gallery-card" data-bs-toggle="modal" data-bs-target="#supplierModal3">
             <img src="https://via.placeholder.com/800x600" class="card-img-top" alt="Supplier 3">
             <div class="card-body">
-                <h5 class="card-title">Supplier 3</h5>
+                <h5 class="card-title"> 8 Suppliers</h5>
                 <p class="card-text">Photography and videography services.</p>
             </div>
         </div>
@@ -87,7 +87,7 @@
         <div class="card gallery-card" data-bs-toggle="modal" data-bs-target="#supplierModal4">
             <img src="https://via.placeholder.com/800x600" class="card-img-top" alt="Supplier 4">
             <div class="card-body">
-                <h5 class="card-title">Supplier 4</h5>
+                <h5 class="card-title">18 Suppliers</h5>
                 <p class="card-text">Event planning and wedding venues.</p>
             </div>
         </div>
@@ -96,8 +96,8 @@
         <div class="card gallery-card" data-bs-toggle="modal" data-bs-target="#supplierModal5">
             <img src="https://via.placeholder.com/800x600" class="card-img-top" alt="Supplier 5">
             <div class="card-body">
-                <h5 class="card-title">Supplier 5</h5>
-                <p class="card-text">Wedding entertainment and music.</p>
+                <h5 class="card-title"> 4 Suppliers</h5>
+                <p class="card-text">Troupe of Tradition Dance in Rwanda.</p>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
         <div class="card gallery-card" data-bs-toggle="modal" data-bs-target="#supplierModal6">
             <img src="https://via.placeholder.com/800x600" class="card-img-top" alt="Supplier 6">
             <div class="card-body">
-                <h5 class="card-title">Supplier 6</h5>
+                <h5 class="card-title"> 5 Suppliers</h5>
                 <p class="card-text">Wedding transportation and cars.</p>
             </div>
         </div>
@@ -242,7 +242,42 @@
             </div>
         </div>
     </div>
-
+     <!-- Modal for Supplier 7 -->
+     <div class="modal fade" id="supplierModal7" tabindex="-1" aria-labelledby="supplierModalLabel7" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="supplierModalLabel7">Supplier 7</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <img src="https://via.placeholder.com/1200x800" class="img-fluid" alt="Supplier 6 Image">
+                  <p>Detailed information about Supplier 6, their services, and portfolio.</p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
+ <!-- Modal for Supplier 8 -->
+ <div class="modal fade" id="supplierModal8" tabindex="-1" aria-labelledby="supplierModalLabel8" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="supplierModalLabel8">Supplier 8</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <img src="https://via.placeholder.com/1200x800" class="img-fluid" alt="Supplier 6 Image">
+              <p>Detailed information about Supplier 6, their services, and portfolio.</p>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+      </div>
+  </div>
+</div>
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
       <div class="container">
