--- a/frontend/test.html
+++ b/frontend/test.html
@@ -39,7 +39,7 @@
               <div class="mt-4">
                   <div class="d-flex">
                     <i class="bi bi-geo-alt-fill"></i>
-                    <p >Address: 198 West 21th Street, Suite 721 New York NY 10016</p>
+                    <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, labore iure? Optio magni fugiat non nesciunt earum exercitationem dolorum dolor illo, nihil aliquid voluptatem numquam necessitatibus porro officia distinctio maiores.</p>
                   </div><hr>
                   <div class="d-flex">
                     <i class="bi bi-telephone-fill"></i>
@@ -69,3 +69,6 @@
     
   </body>
 </html>
+
+
+<div class="container">
