--- a/frontend/home_packages/home.htm
+++ b/frontend/home_packages/home.htm
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/frontend/css/index.css" />
+
     <link rel="stylesheet" href="/frontend/css/home.css">
+    <link rel="stylesheet" href="/frontend/css/navbar.css">
     <title>Event</title>
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -12,6 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous"
     />
+   
 </head>
 <body>
  
@@ -31,9 +33,10 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">About</a>
@@ -42,7 +45,7 @@
                         <a class="nav-link active" href="#">Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Packages</a>
+                        <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
