--- a/frontend/home_packages/home.htm
+++ b/frontend/home_packages/home.htm
@@ -64,7 +64,7 @@
         <div class="custom-caption">
             <h1>Welcome to Wedding Planner</h5>
             <p>We Already Be With You.</p>
-            <a href="#" class="btn btn-primary">Our Services</a>
+            <a href="#" class="btn btn-primary">Book Now</a>
         </div>
         
         
