--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -8,11 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/frontend/css/supply.css">
-   
     <link rel="stylesheet" href="/frontend/css/footer.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+   
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand logo-margin" href="#">Logo</a>
@@ -52,7 +52,7 @@
             </div>
         </div>
     </nav>
-   
+
     <div class="container min-vh-100 d-flex justify-content-center align-items-center">
         <div class="row w-100 justify-content-center">
             <div class="col-md-8">
@@ -60,13 +60,13 @@
                 <form>
                     <!-- Supplier Name -->
                     <div class="mb-3">
-                        <label for="companyName" class="form-label">Supplier Name</label>
+                        <label for="companyName" class="form-label">First Name</label>
                         <input type="text" class="form-control" id="companyName" placeholder="First Name" required>
                     </div>
                     <!-- Supplier Contact Information --> 
                     <div class="mb-3">
-                        <label for="contactName" class="form-label">Second Name</label>
-                        <input type="text" class="form-control" id="contactName" placeholder="Second Name" required>
+                        <label for="contactName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="contactName" placeholder="Last Name" required>
                     </div>
                     <div class="mb-3">
                         <label for="contactEmail" class="form-label">Contact Email</label>
@@ -87,11 +87,19 @@
                         <select class="form-select" id="serviceCategory" required>
                             <option value="" disabled selected>Select service category</option>
                             <option value="1">Catering</option>
-                            <option value="2">Photography</option>
+                            <option value="2">Videography & Photography</option>
                             <option value="3">Venue</option>
                             <option value="4">Florists</option>
                             <option value="5">Wedding Planner</option>
-                            <option value="6">Entertainment</option>
+                            <option value="6">Decor</option>
+                            <option value="7">Cars</option>
+                            <option value="8">Invitation Card</option>
+                            <option value="9">Beauty</option>
+                            <option value="10">Style</option>
+                            <option value="11">M.C</option>
+                            <option value="12">Sound & Light</option>
+                            <option value="13">Type of Entertainment</option>
+                            <option value="14">Other..</option>
                         </select>
                     </div>
                     <!-- Experience -->
@@ -101,8 +109,8 @@
                     </div>
                     <!-- Portfolio or Website -->
                     <div class="mb-3">
-                        <label for="portfolioLink" class="form-label">Instagram Profile Link or other PlatForm</label> 
-                        <input type="url" class="form-control" id="portfolioLink" placeholder="PlatForm Link">
+                        <label for="portfolioLink" class="form-label">Instagram Profile Link or other Platform</label> 
+                        <input type="url" class="form-control" id="portfolioLink" placeholder="Platform Link">
                     </div>
                     <!-- Short Message or Description -->
                     <div class="mb-3">
@@ -161,6 +169,9 @@
             </div>
         </div>
     </footer>
-    <!-- Include Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhG
+  
+    <!-- Bootstrap 5 JS (needs Popper.js for the navbar toggle) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
