--- a/frontend/test.html
+++ b/frontend/test.html
@@ -1,74 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Document</title>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand logo-margin" href="#">Logo</a>
+      <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+      >
+          <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="./style.css" rel="stylesheet" >
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>Contact Form</title>
-  </head>
-  <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-7">
-              <h4>Get in touch</h4>
-                <div class="mb-3">
-                    <label for="formGroupExampleInput" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your name">
-                  </div>
-                  <div class="mb-3">
-                    <label for="formGroupExampleInput2" class="form-label">Email</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your email">
-                  </div>
-                  <div class="mb-3">
-                    <label for="formGroupExampleInput2" class="form-label">Contact Number</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your number">
-                  </div>
-                  <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                  </div>
-                  <button class="btn btn-primary">Submit</button>
-            </div>
-            <div class="col-md-5 ">
-              <h4>Contact us</h4><hr>
-              <div class="mt-4">
-                  <div class="d-flex">
-                    <i class="bi bi-geo-alt-fill"></i>
-                    <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, labore iure? Optio magni fugiat non nesciunt earum exercitationem dolorum dolor illo, nihil aliquid voluptatem numquam necessitatibus porro officia distinctio maiores.</p>
-                  </div><hr>
-                  <div class="d-flex">
-                    <i class="bi bi-telephone-fill"></i>
-                    <p>Contact :- 8888888888</p>
-                  </div><hr>
-                  <div class="d-flex">
-                    <i class="bi bi-envelope-fill"></i>
-                    <p>Email:- Contact@gmail.com</p>
-                  </div><hr>
-                  <div class="d-flex">
-                    <i class="bi bi-browser-chrome"></i>
-                    <p>Website: www.contact.com</p>
-                  </div><hr>
-              </div>
-            </div>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="#">Service</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link active" href="#">Contact</a>
+              </li>
+          </ul>
+      </div>
     </div>
-    <!-- Optional JavaScript; choose one of the two! -->
+  </nav>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    
-  </body>
+  <!-- Bootstrap 5 JS (needs Popper.js for the navbar toggle) -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+</body>
 </html>
-
-
-<div class="container">
