--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -52,7 +52,8 @@
             </div>
         </div>
     </nav>
-
+    
+        </div>
     <div class="container min-vh-100 d-flex justify-content-center align-items-center">
         <div class="row w-100 justify-content-center">
             <div class="col-md-8">
@@ -123,6 +124,7 @@
             </div>
         </div>
     </div>
+    
 
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
