--- a/frontend/test.html
+++ b/frontend/test.html
@@ -3,49 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>Document</title>
+  <title>Supplier Registration - Wedding Planner</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand logo-margin" href="#">Logo</a>
-      <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-      >
-          <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mb-lg-0">
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" href="#">Service</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" href="#">Contact</a>
-              </li>
-          </ul>
+  <div class="container py-5">
+    <!-- Welcome Message -->
+    <div class="row">
+      <div class="col-12">
+        <h2 class="text-center text-primary mb-4">Welcome Wedding Suppliers!</h2>
+        <p class="lead text-center">
+          We're thrilled that you're interested in becoming a part of our exclusive network of wedding service providers. Our platform is designed to help connect trusted suppliers with couples planning their dream weddings. Whether you specialize in catering, photography, floral arrangements, or other wedding services, we want to showcase your expertise and help you grow your business.
+        </p>
       </div>
     </div>
-  </nav>
+
+    <!-- Benefits of Registering -->
+    <div class="row">
+      <div class="col-12">
+        <h3 class="text-center mb-4">By registering as a supplier with us, you'll have the opportunity to:</h3>
+        <ul class="list-group">
+          <li class="list-group-item">Reach a broader audience of couples looking for reliable wedding vendors.</li>
+          <li class="list-group-item">Showcase your work, share your story, and highlight your unique offerings.</li>
+          <li class="list-group-item">Join a community of top-tier wedding professionals committed to making each event unforgettable.</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Call to Action and Registration Instructions -->
+    <div class="row mt-4">
+      <div class="col-12">
+        <h4 class="text-center mb-4">To get started, please complete the supplier registration form below.</h4>
+        <p class="text-center">
+          Once your details are submitted, we'll review your application and contact you with the next steps.
+        </p>
+        <p class="text-center">
+          We can't wait to have you on board as we work together to create beautiful, memorable weddings for our clients!
+        </p>
+        <p class="text-center">
+          Thank you for considering us as your partner in wedding planning. We look forward to collaborating with you!
+        </p>
+      </div>
+    </div>
+    
+    <!-- Supplier Registration Form (optional) -->
+    <div class="row mt-5">
+      <div class="col-md-8 offset-md-2">
+        <h4 class="text-center">Supplier Registration Form</h4>
+        <form>
+          <!-- Supplier Name -->
+          <div class="mb-3">
+            <label for="companyName" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="companyName" placeholder="First Name" required>
+          </div>
+          <!-- Contact Information --> 
+          <div class="mb-3">
+            <label for="contactName" class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="contactName" placeholder="Last Name" required>
+          </div>
+          <div class="mb-3">
+            <label for="contactEmail" class="form-label">Contact Email</label>
+            <input type="email" class="form-control" id="contactEmail" placeholder="Email address" required>
+          </div>
+          <div class="mb-3">
+            <label for="contactNumber" class="form-label">Contact Number</label>
+            <input type="text" class="form-control" id="contactNumber" placeholder="Phone number" required>
+          </div>
+          <!-- Service Category -->
+          <div class="mb-3">
+            <label for="serviceCategory" class="form-label">Service Category</label>
+            <select class="form-select" id="serviceCategory" required>
+              <option value="" disabled selected>Select service category</option>
+              <option value="1">Catering</option>
+              <option value="2">Videography & Photography</option>
+              <option value="3">Venue</option>
+              <option value="4">Florists</option>
+              <option value="5">Wedding Planner</option>
+              <option value="6">Decor</option>
+              <option value="7">Cars</option>
+              <option value="8">Invitation Card</option>
+              <option value="9">Beauty</option>
+              <option value="10">Style</option>
+              <option value="11">M.C</option>
+              <option value="12">Sound & Light</option>
+              <option value="13">Type of Entertainment</option>
+              <option value="14">Other..</option>
+            </select>
+          </div>
+          <!-- Submit Button -->
+          <button type="submit" class="btn btn-primary w-100">Register as Supplier</button>
+        </form>
+      </div>
+    </div>
+  </div>
 
   <!-- Bootstrap 5 JS (needs Popper.js for the navbar toggle) -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
