--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -52,7 +52,16 @@
             </div>
         </div>
     </nav>
-    
+    <div class="container py-5">
+        <!-- Welcome Message -->
+        <div class="row">
+          <div class="col-12">
+            <h2 class="text-center text-primary mb-4">Welcome Wedding Suppliers!</h2>
+            <p class="lead text-center">
+              We're thrilled that you're interested in becoming a part of our exclusive network of wedding service providers. Our platform is designed to help connect trusted suppliers with couples planning their dream weddings. Whether you specialize in catering, photography, floral arrangements, or other wedding services, we want to showcase your expertise and help you grow your business.
+            </p>
+          </div>
+        </div>
         </div>
     <div class="container min-vh-100 d-flex justify-content-center align-items-center">
         <div class="row w-100 justify-content-center">
