--- a/frontend/test.html
+++ b/frontend/test.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div class="container py-5">
+  <div class="sup-container py-5">
     <!-- Welcome Message -->
     <div class="row">
       <div class="col-12">
