--- a/frontend/home_packages/home.htm
+++ b/frontend/home_packages/home.htm
@@ -51,7 +51,7 @@
                         <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Contact</a>
+                        <a class="nav-link active" href="#">Booking</a>
                     </li>
                 </ul>
             </div>
