--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -46,7 +46,7 @@
                         <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Contact</a>
+                        <a class="nav-link active" href="#">Booking</a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
     <div class="p container min-vh-100 d-flex justify-content-center align-items-center">
         <div class="row w-100 justify-content-center">
             <div class="col-md-8">
-                <h4 class="text-center">Supplier Registration Form</h4>
+                <h4 class="text-center text-white">Supplier Registration Form</h4>
                 <form>
                     <!-- Supplier Name -->
                     <div class="mb-3">
