--- a/frontend/home_packages/booking.html
+++ b/frontend/home_packages/booking.html
@@ -12,6 +12,7 @@
 />
 
     <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/css/booking.css">
     <link rel="stylesheet" href="/frontend/css/footer.css">
     
 </head>
@@ -34,7 +35,7 @@
             </div>
         </div>
     </nav>
-
+<video class="video-container" src="/assethome/booking.mp4" autoplay muted></video>
     <!-- Booking Form -->
     <div class="container mt-5">
         <h2>Book Your Event</h2>
@@ -81,65 +82,6 @@
             <button type="submit" class="btn btn-primary">Submit Booking</button>
         </form>
     </div>
-
- 
-
-   
-
-
-
-
-
-<!-- Footer -->
-<!-- Footer -->
-<footer class="bg-dark text-light py-4 footer-animated">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h5>About Us</h5>
-          <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-        </div>
-        <div class="col-md-4">
-          <h5>Quick Links</h5>
-          <ul class="list-unstyled footer-content">
-            <li><a href="home.htm" class="text-light">Home</a></li>
-            <li><a href="#" class="text-light">About</a></li>
-            <li><a href="#" class="text-light">Services</a></li>
-            <li><a href="index.html" class="text-light">Packages</a></li>
-            <li><a href="#" class="text-light">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <h5>Contact Us</h5>
-          <p class="footer-content">Email: info@eventplanner.com</p>
-          <p class="footer-content">Phone: +250785300707</p>
-          <p class="footer-content">Address: 123 Event St, City, Country</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col text-center mt-4">
-          <ul class="list-inline footer-content">
-            <li class="list-inline-item">
-              <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col text-center mt-3">
-          <p>&copy; 2024 Event Planner. All rights reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-
 
 
 
