--- a/frontend/home_packages/home.htm
+++ b/frontend/home_packages/home.htm
@@ -39,7 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Service</a>
