--- a/frontend/home_packages/about.html
+++ b/frontend/home_packages/about.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Service</a>
@@ -47,31 +47,136 @@
         </div>
     </nav>
 
-    <!-- About Section -->
-    <section id="about" class="container my-5">
-        <div class="row align-items-center">
-            <!-- Text Content -->
-            <div class="col-lg-6">
-                <h2 class="display-4 text-center text-lg-start mb-4">Your Dream Wedding Awaits</h2>
-                <p class="lead text-center text-lg-start mb-3">At [Your Wedding Planner Name], we specialize in creating
-                    beautiful, personalized weddings that reflect your unique love story. Our team is here to help you
-                    design a day that's as beautiful and meaningful as your relationship.</p>
-                <p class="text-center text-lg-start mb-3">With years of experience in event planning, we know how to
-                    handle every detail, from finding the perfect venue to coordinating with trusted vendors. We work
-                    closely with you every step of the way, ensuring your wedding day is as seamless and memorable as
-                    possible.</p>
-                <p class="text-center text-lg-start mb-4">Let us turn your wedding dreams into reality. Contact us today,
-                    and let's start planning your perfect day!</p>
-                <div class="text-center text-lg-start mt-4">
-                    <a href="#contact" class="btn btn-primary btn-lg shadow-sm">Get Started</a>
-                </div>
-            </div>
-            <!-- Image Content -->
-            <div class="col-lg-6 mt-4 mt-lg-0">
-                <img src="/assethome/1.jpg" alt="Wedding Planner Team" class="img-fluid rounded shadow-lg">
+   <!-- About Section -->
+<section id="about" class="container my-5">
+    <div class="row align-items-center">
+        <!-- Text Content -->
+        <div class="col-lg-6">
+            <h2 class="display-4 text-center text-lg-start mb-4">Your Dream Wedding Awaits</h2>
+            <p class="lead text-center text-lg-start mb-3">
+                At [Your Wedding Planner Name], we specialize in creating beautiful, personalized weddings that reflect your unique love story. Our team is here to help you design a day that's as beautiful and meaningful as your relationship.
+            </p>
+            <p class="text-center text-lg-start mb-3">
+                With years of experience in event planning, we know how to handle every detail, from finding the perfect venue to coordinating with trusted vendors. We work closely with you every step of the way, ensuring your wedding day is as seamless and memorable as possible.
+            </p>
+            <p class="text-center text-lg-start mb-4">
+                Let us turn your wedding dreams into reality. Contact us today, and let's start planning your perfect day!
+            </p>
+            <div class="text-center text-lg-start mt-4">
+                <a href="#contact" class="btn btn-primary btn-lg shadow-sm">Get Started</a>
             </div>
         </div>
-    </section>
+
+        <!-- Image Content -->
+        <div class="col-lg-6 mt-4 mt-lg-0">
+            <img src="/assethome/1.jpg" alt="Wedding Planner Team" class="img-fluid rounded shadow-lg">
+        </div>
+    </div>
+
+    <!-- Our Values Section -->
+    <div class="row my-5">
+        <div class="col-lg-12 text-center">
+            <h3 class="display-5 mb-4">Our Values</h3>
+            <p class="lead mb-4">
+                We believe in delivering a wedding experience that's as unique as you are. Our approach is built around the following core values:
+            </p>
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <h5><i class="fas fa-heart mb-2"></i> Passion</h5>
+                    <p>We love what we do and pour our hearts into every wedding we plan. Your special day is our priority, and we take pride in making it perfect.</p>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <h5><i class="fas fa-gift mb-2"></i> Attention to Detail</h5>
+                    <p>No detail is too small. From the flowers to the music, we make sure every part of your wedding aligns with your vision.</p>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <h5><i class="fas fa-users mb-2"></i> Collaboration</h5>
+                    <p>We work closely with you, your family, and trusted vendors to ensure everything goes smoothly on the big day. Your vision is our blueprint.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Team Introduction Section -->
+    <div class="row my-5">
+        <div class="col-lg-12 text-center">
+            <h3 class="display-5 mb-4">Meet Our Team</h3>
+            <p class="lead mb-4">
+                We are a passionate team of planners, designers, and coordinators who specialize in crafting memorable weddings. Each of us brings something unique to the table to make your day special.
+            </p>
+            <div class="row">
+                <!-- Team Member 1 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="/assethome/about1.jpg" class="card-img-top" alt="Team Member 1">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Emma Smith</h5>
+                            <p class="card-text">Lead Planner</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Team Member 2 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="/assethome/about2.png" class="card-img-top" alt="Team Member 2">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">John Doe</h5>
+                            <p class="card-text">Design Expert</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Team Member 3 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="/assethome/3.jpg" class="card-img-top" alt="Team Member 3">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Sophia Lee</h5>
+                            <p class="card-text">Coordinator</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Testimonials Section -->
+    <div class="row my-5">
+        <div class="col-lg-12 text-center">
+            <h3 class="display-5 mb-4">What Our Clients Say</h3>
+            <p class="lead mb-4">Here's what our past clients have said about working with us!</p>
+            <div class="row">
+                <!-- Testimonial 1 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">"The team at [Your Wedding Planner Name] exceeded our expectations! Every detail was perfect, and they made our wedding day stress-free and unforgettable!"</p>
+                            <footer class="blockquote-footer">Anna & Mark</footer>
+                        </div>
+                    </div>
+                </div>
+                <!-- Testimonial 2 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">"They really listened to what we wanted, and the result was a wedding that truly reflected us. Thank you for making our dream wedding come true!"</p>
+                            <footer class="blockquote-footer">Lucy & James</footer>
+                        </div>
+                    </div>
+                </div>
+                <!-- Testimonial 3 -->
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text">"From the first consultation to the final dance, the team was with us every step of the way. They made our wedding day magical!"</p>
+                            <footer class="blockquote-footer">Sarah & Tom</footer>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="bg-dark text-light py-4">
