--- a/frontend/home_packages/booking.html
+++ b/frontend/home_packages/booking.html
@@ -64,7 +64,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="home.htm">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Service</a></li>
                     <li class="nav-item"><a class="nav-link active" href="index.html">Packages</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a></li>
