--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link active" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Service</a>
+              <a class="nav-link active" href="about.html">Service</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Packages</a>
