--- a/frontend/supliers/suply.html
+++ b/frontend/supliers/suply.html
@@ -34,7 +34,7 @@
                         <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="/frontend/home_packages/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Service</a>
