--- a/frontend/home_packages/service.html
+++ b/frontend/home_packages/service.html
@@ -53,7 +53,7 @@
       <!-- Wedding Planner -->
       <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000">
         <div class="card">
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Wedding Planner">
+          <img src="/assethome/serv.jpg" class="card-img-top" alt="Wedding Planner">
           <div class="card-body">
             <h5 class="card-title">Wedding Planner</h5>
             <p class="card-text">Our expert wedding planners will guide you every step of the way, ensuring your wedding is organized and stress-free.</p>
@@ -64,7 +64,7 @@
       <!-- Venue Manager -->
       <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
         <div class="card">
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Venue Manager">
+          <img src="/assethome/venu2.jpg" class="card-img-top" alt="Venue Manager">
           <div class="card-body">
             <h5 class="card-title">Venue Manager</h5>
             <p class="card-text">The Venue Manager oversees the logistics and setup of the venue, ensuring everything runs smoothly on your big day.</p>
@@ -75,7 +75,7 @@
       <!-- Event Coordinator -->
       <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
         <div class="card">
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Event Coordinator">
+          <img src="/assethome/cord.jpg" class="card-img-top" alt="Event Coordinator">
           <div class="card-body">
             <h5 class="card-title">Event Coordinator</h5>
             <p class="card-text">Our Event Coordinators are responsible for ensuring the event unfolds as planned, managing the schedule and all moving parts.</p>
@@ -86,7 +86,7 @@
       <!-- Decor Specialist -->
       <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
         <div class="card">
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Decor Specialist">
+          <img src="/assethome/venu1.jpg" class="card-img-top" alt="Decor Specialist">
           <div class="card-body">
             <h5 class="card-title">Decor Specialist</h5>
             <p class="card-text">Our Decor Specialists bring your vision to life with stunning floral arrangements, lighting, and unique styling.</p>
@@ -97,7 +97,7 @@
       <!-- Catering Manager -->
       <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
         <div class="card">
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Catering Manager">
+          <img src="/assethome/cat22.jpg" class="card-img-top" alt="Catering Manager">
           <div class="card-body">
             <h5 class="card-title">Catering Manager</h5>
             <p class="card-text">The Catering Manager ensures a delicious and customized menu, providing your guests with exceptional food and service.</p>
@@ -108,7 +108,7 @@
       <!-- Photographer/Videographer -->
       <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
         <div class="card">
-          <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Photographer/Videographer">
+          <img src="/assethome/frank2.jpg" class="card-img-top" alt="Photographer/Videographer">
           <div class="card-body">
             <h5 class="card-title">Photographer & Videographer</h5>
             <p class="card-text">Our photographers and videographers capture every precious moment, creating beautiful memories that last a lifetime.</p>
