--- a/frontend/home_packages/about.html
+++ b/frontend/home_packages/about.html
@@ -129,7 +129,7 @@
                 <!-- Team Member 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="/assethome/3.jpg" class="card-img-top" alt="Team Member 3">
+                        <img src="/assethome/kobe.jpg" class="card-img-top" alt="Team Member 3">
                         <div class="card-body text-center">
                             <h5 class="card-title">Sophia Lee</h5>
                             <p class="card-text">Coordinator</p>
