--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -130,7 +130,7 @@
       <img src="/assethome/aime.jpg" class="card-img-top" alt="...">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">Troupe</h5>
-        <a href="#" class="btn btn-primary">Read More</a>
+        <a href="/frontend/allpack/indinzi/troup/indinzi.html" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
