--- a/frontend/allpack/indinzi/troup/indinzi.html
+++ b/frontend/allpack/indinzi/troup/indinzi.html
@@ -116,8 +116,14 @@
         </button>
     </div>
 </div>
+<div class="item">
+    <a href="#">Images</a>
+    
+    <a href="#">Hightlight</a>
+    </div>
 
-      
+
+
     <!-- Footer -->
     <footer class="bg-dark text-light py-4 footer-animated">
         <div class="container">
